<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/sign_up_fragment_back_arrow_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back_white_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <com.appchallengers.appchallengers.helpers.component.SFUITextRegularTextViewComponent
            android:id="@+id/sing_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/fragment_sing_up_text"
            android:textColor="#24243D"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_fragment_profile_image_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1.0">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="vertical">
           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                   android:id="@+id/sign_up_fragment_profile_image"
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:layout_gravity="center"
                   android:src="@drawable/ic_account_circle_black_24dp"
                   app:civ_border_color="#F5F5F5"
                   app:civ_border_width="3dp" />
               <ProgressBar
                   android:id="@+id/sign_up_fragment_progressbar"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:visibility="gone"
                   />
           </RelativeLayout>


            <com.appchallengers.appchallengers.helpers.component.SFUITextRegularTextViewComponent
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="bottom"
                android:text="@string/fragment_sing_up_porgile_picture"
                android:textColor="@color/edittext_text_color"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <com.appchallengers.appchallengers.helpers.component.EditTextComponent
                android:id="@+id/sign_up_fragment_user_fullname_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/fragment_sing_up_full_name"
                android:maxLength="254"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/edittext_text_color"
                android:textColorHint="@color/edittext_text_color" />

            <com.appchallengers.appchallengers.helpers.component.EditTextComponent
                android:id="@+id/sign_up_fragment_email_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/fragment_sing_up_email"
                android:maxLength="254"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/edittext_text_color"
                android:textColorHint="@color/edittext_text_color" />

            <com.appchallengers.appchallengers.helpers.component.EditTextComponent
                android:id="@+id/sign_up_fragment_password_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/fragment_sing_up_password"
                android:maxLength="254"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/edittext_text_color"
                android:textColorHint="@color/edittext_text_color" />

            <com.appchallengers.appchallengers.helpers.component.EditTextComponent
                android:id="@+id/sign_up_fragment_country_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_bg"
                android:focusable="false"
                android:hint="@string/fragment_sing_up_country"
                android:maxLength="254"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/edittext_text_color"
                android:textColorHint="@color/edittext_text_color" />

            <com.appchallengers.appchallengers.helpers.component.ButtonSFUITextRegularComponent
                android:id="@+id/sign_up_fragment_sign_up_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:spinning_bar_width="4dp"
                app:spinning_bar_color="#FFF"
                android:background="@drawable/button_bg"
                android:text="@string/fragment_sing_up_button_text"
                android:textColor="#FFFEFE"
                android:textSize="17sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:orientation="vertical">

            <com.appchallengers.appchallengers.helpers.component.SFUITextRegularTextViewComponent
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="bottom"
                android:text="@string/fragment_sing_up_by_using_appchallenger_you_will_accept"
                android:textColor="#24243D"
                android:textSize="13sp" />

            <com.appchallengers.appchallengers.helpers.component.SFUITextRegularTextViewComponent
                android:id="@+id/sign_up_fragment_profile_terms_cookie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/fragment_sing_up_terms_and_cookie_policy"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>