<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.appchallengers.appchallengers.fragments.login.LoginFragment">

    <LinearLayout
        android:id="@+id/login_fragment_login_image_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/login_fragment_back_arrow_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_white_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:weightSum="1">

            <com.appchallengers.appchallengers.helpers.component.SFUITextRegularTextViewComponent
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/fragment_login_text"
                android:textColor="#24243D"
                android:textSize="28sp"
                android:textStyle="bold" />

            <com.appchallengers.appchallengers.helpers.component.EditTextComponent
                android:id="@+id/login_fragment_email_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/fragment_login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLength="254"
                android:padding="10dp"
                android:textColor="@color/edittext_text_color"
                android:textColorHint="@color/edittext_text_color"
                android:textSize="17sp" />

            <com.appchallengers.appchallengers.helpers.component.EditTextComponent
                android:id="@+id/login_fragment_password_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/fragment_login_password_hint"
                android:inputType="textPassword"
                android:maxLength="254"
                android:padding="10dp"
                android:textColor="@color/edittext_text_color"
                android:textColorHint="@color/edittext_text_color"
                android:textSize="17sp" />
            <com.appchallengers.appchallengers.helpers.component.ButtonSFUITextRegularComponent
                android:id="@+id/login_fragment_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/button_bg"
                android:text="@string/fragment_login_button_text"
                app:spinning_bar_width="4dp"
                app:spinning_bar_color="#FFF"
                android:textColor="#FFFEFE"
                android:textSize="17sp" />

            <com.appchallengers.appchallengers.helpers.component.SFUITextRegularTextViewComponent
                android:id="@+id/login_fragment_forgot_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment_login_forgot_my_password_text"
                android:textColor="#24243D"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
